--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
         let ncmb = new NCMB(appKey, clientKey);
         // 利用するデータベースを指定（存在しなければ生成）
         let TestClass = ncmb.DataStore("FetchTest");
+        TestClass.fetch().then(function(results){var dataa=results.get("text");})
 
         function register() {
             // 登録するレコードを用意
@@ -30,6 +31,14 @@
                 .catch(function(err) {
                     $("#message").html("Failed to create new object, with error code: " + JSON.stringify(err));
                 })
+        }
+        function fetch(){
+            let TestClass = ncmb.DataStore("FetchTest");
+            TestClass.fetch().then(function(results){
+                let data=results.get("text");
+                let update=results.get("updateDate");
+                $("#message").html(data + ":" + update);
+            })
         }
     </script>
 </head>
