--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
                 for (var i = 0; i < results.length; i++) {
                     var data = results[i].get("text");
                     var update = results[i].get("updateDate");
-                    msg += data + ":" + update + "\n";
+                    msg += data + ":" + update + "<br>";
                 }
                 $("#message").html(msg);
                 })
